# ansible-k8s-cluster-vagrant

./: .ansible-lint  .gitignore  .yamllint  Vagrantfile  pyproject.toml  requirements.yaml
.devcontainer/: Dockerfile  devcontainer.json
inventory/: inventory-localhost  inventory-localhost.yaml  inventory.yaml
playbooks/: build-cluster.yaml  test-deployment.yaml
vars/: main.yaml
